# mini-coding-agent

./: EXAMPLE.md  MODEL_BENCHMARKS.md  README.md  install.sh  mini_coding_agent.py  pyproject.toml
tests/: test_mini_coding_agent.py
