[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-coding-agent-openrouter"
version = "0.1.0"
description = "Minimal standalone coding agent backed by OpenRouter"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
mini-coding-agent = "mini_coding_agent:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5,<9",
  "ruff>=0.4.4",
]

[tool.setuptools]
py-modules = ["mini_coding_agent"]
